logging in working correctly

--- a/app/src/main/res/layout/login_main.xml
+++ b/app/src/main/res/layout/login_main.xml
@@ -35,4 +35,20 @@
                 style="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                 android:padding="8dp"/>
     </LinearLayout>
+    <com.google.android.gms.common.SignInButton
+            android:id="@+id/sign_in_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true" android:layout_alignParentRight="true"
+            android:layout_marginRight="135dp" android:layout_marginEnd="135dp" android:layout_alignParentStart="true"
+            android:layout_marginLeft="148dp" android:layout_marginStart="148dp" android:layout_alignParentLeft="true"/>
+
+    <ProgressBar
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/sign_in_progress_bar"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:visibility="gone"/>
 </RelativeLayout>
