--- a/app/src/main/res/layout/activity_dah_board.xml
+++ b/app/src/main/res/layout/activity_dah_board.xml
@@ -9,45 +9,7 @@
         android:fitsSystemWindows="true"
         tools:openDrawer="start">
 
-    <android.support.design.widget.AppBarLayout
-
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:background="@android:color/white"
-            android:theme="@style/AppTheme.AppBarOverlay">
-
-        <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
-                app:popupTheme="@style/AppTheme.PopupOverlay"/>
-
-
-        <LinearLayout
-
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="125dp">
-
-            <android.support.v7.widget.RecyclerView
-                    android:orientation="horizontal"
-                    android:id="@+id/rvhorizontal_dashboard"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-            </android.support.v7.widget.RecyclerView>
-
-        </LinearLayout>
-
-        <android.support.v7.widget.RecyclerView
-
-                android:id="@+id/rv_dashboard"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-        </android.support.v7.widget.RecyclerView>
-
-    </android.support.design.widget.AppBarLayout>
+    <include layout="@layout/dahboard_content"/>
 
     <android.support.design.widget.NavigationView
 
