--- a/app/src/main/res/layout/rvnav_listitem.xml
+++ b/app/src/main/res/layout/rvnav_listitem.xml
@@ -9,6 +9,7 @@
                 android:orientation="vertical"
                 android:gravity="center">
             <ImageView
+                    android:elevation="8dp"
                     android:id="@+id/ivCircleImage"
                     android:layout_width="70dp"
                     android:layout_height="70dp"
