--- a/app/src/main/res/menu/activity_dah_board_drawer.xml
+++ b/app/src/main/res/menu/activity_dah_board_drawer.xml
@@ -36,6 +36,10 @@
                 android:id="@+id/nav_help"
                 android:icon="@android:drawable/ic_menu_help"
                 android:title="Help"/>
+        <item
+                android:id="@+id/logout"
+                android:icon="@android:drawable/ic_menu_help"
+                android:title="LogOut"/>
     </group>
 
 </menu>
