--- a/app/src/main/res/layout/dahboard_content.xml
+++ b/app/src/main/res/layout/dahboard_content.xml
@@ -5,7 +5,14 @@
         android:layout_width="match_parent" android:layout_height="match_parent"
 >
 
-
+    <ProgressBar
+            android:id="@+id/progressBar_cyclic"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minHeight="50dp"
+            android:minWidth="50dp"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true" />
     <android.support.design.widget.AppBarLayout
             android:id="@+id/appBar"
             android:layout_height="wrap_content"
